Add default exclude packages.
The exclude_packages list are used to exclude building these packages
and break related circles.

Signed-off-by: Zhang Qiang <qiang.z.zhang@intel.com>
Change-Id: Ib5b7d084d2196fe84f169e4b887fc069eb778041

--- a/gbs.conf
+++ b/gbs.conf
@@ -9,3 +9,4 @@ url=${work_dir}/pre-built/toolchain-x86/
 [profile.tizen3.0_ivi]
 repos=repo.tizen3.0_x86
 buildconf=${work_dir}/scm/meta/build-config/build.conf
+exclude_packages=libtool,gettext
