Update build conf key based on build-config updates
Signed-off-by: Zhang Qiang <qiang.z.zhang@intel.com>

--- a/gbs.conf
+++ b/gbs.conf
@@ -1,6 +1,6 @@
 [general]
 tmpdir=/var/tmp/
-profile = profile.tizen3.0_generic
+profile = profile.tizen3.0_common
 work_dir=.
 
 [repo.tizen3.0_x86]
@@ -9,11 +9,11 @@ url=${work_dir}/pre-built/toolchain-x86/
 [repo.tizen3.0_arm]
 url=${work_dir}/pre-built/toolchain-arm/
 
-[profile.tizen3.0_generic]
+[profile.tizen3.0_common]
 repos=repo.tizen3.0_x86,repo.tizen3.0_arm
-# For wayland
+buildconf=${work_dir}/scm/meta/build-config/build.conf
+
+# For wayland ia32
 #buildconf=${work_dir}/scm/meta/build-config/build_wayland.conf
-# For x11
+# For wayland x86_64
 #buildconf=${work_dir}/scm/meta/build-config/build_x11.conf
-# For both wayland and x11
-#buildconf=${work_dir}/scm/meta/build-config/build_xwayland.conf
