Add exclude package list
Change-Id: I136f7ad787e8e14048865576c75d5f88db9109e6
Signed-off-by: Zhang Qiang <qiang.z.zhang@intel.com>

--- a/gbs.conf
+++ b/gbs.conf
@@ -12,6 +12,7 @@ url=${work_dir}/pre-built/toolchain-arm/
 [profile.tizen3.0_common]
 repos=repo.tizen3.0_x86,repo.tizen3.0_arm
 buildconf=${work_dir}/scm/meta/build-config/build.conf
+exclude_packages=libtool,gettext
 
 # For wayland ia32
 #buildconf=${work_dir}/scm/meta/build-config/build_wayland.conf
