--- a/gbs.conf
+++ b/gbs.conf
@@ -3,6 +3,9 @@ tmpdir=/var/tmp/
 profile = profile.tizen3.0_common
 work_dir=.
 
+[repo.tizen3.0_x86_64]
+url=${work_dir}/pre-built/toolchain-x86_64/
+
 [repo.tizen3.0_x86]
 url=${work_dir}/pre-built/toolchain-x86/
 
@@ -10,7 +13,7 @@ url=${work_dir}/pre-built/toolchain-x86/
 url=${work_dir}/pre-built/toolchain-arm/
 
 [profile.tizen3.0_common]
-repos=repo.tizen3.0_x86,repo.tizen3.0_arm
+repos=repo.tizen3.0_x86,repo.tizen3.0_arm,repo.tizen3.0_x86_64
 buildconf=${work_dir}/scm/meta/build-config/build.conf
 exclude_packages=libtool,gettext
 
