Update build.conf variation according to lastest rev.
* updated path of build-config for the following:

  - wayland ia32
  - wayland x86_64

* added path of build-config for the following:

  - wayland emulator32 wayland
  - wayland arm32
  - wayland arm64

Change-Id: I5d72ec465f404e8b0280b51e9476ab0a52cdd76f
Signed-off-by: Rui Lv <ruix.lv@intel.com>

--- a/gbs.conf
+++ b/gbs.conf
@@ -18,6 +18,13 @@ buildconf=${work_dir}/scm/meta/build-config/build.conf
 exclude_packages=libtool,gettext
 
 # For wayland ia32
-#buildconf=${work_dir}/scm/meta/build-config/build_wayland.conf
+# buildconf=${work_dir}/scm/meta/build-config/build_wayland.conf
+# For wayland ia32 emulator
+# buildconf=${work_dir}/scm/meta/build-config/build-emulator32-wayland.conf
 # For wayland x86_64
-#buildconf=${work_dir}/scm/meta/build-config/build_x11.conf
+# buildconf=${work_dir}/scm/meta/build-config/build-x86_64-wayland.config
+# For wayland arm32
+# buildconf=${work_dir}/scm/meta/build-config/build-arm-wayland.conf
+# For wayland arm64
+# buildconf=${work_dir}/scm/meta/build-config/build-arm64-wayland.conf
+
