--- a/gbs.conf
+++ b/gbs.conf
@@ -22,7 +22,7 @@ exclude_packages=libtool,gettext
 # For emulator32 wayland
 # buildconf=${work_dir}/scm/meta/build-config/build-emulator32-wayland.conf
 # For wayland x86_64
-# buildconf=${work_dir}/scm/meta/build-config/build-x86_64-wayland.config
+# buildconf=${work_dir}/scm/meta/build-config/build-x86_64-wayland.conf
 # For wayland arm32
 # buildconf=${work_dir}/scm/meta/build-config/build-arm-wayland.conf
 # For wayland arm64
