Set fallback_to_native to ture for localfullbuild
Add the key fallback_to_native to ture: if gbs export fails in non-native
package, this key word makes gbs export in native mode in the git tree.

Change-Id: Ib816aa2d709a92673a9c7f3ebc4071ca162501a2
Signed-off-by: Li Jinjing <jinjingx.li@intel.com>

--- a/gbs.conf
+++ b/gbs.conf
@@ -2,6 +2,7 @@
 tmpdir=/var/tmp/
 profile = profile.tizen3.0_ivi
 work_dir=.
+fallback_to_native=true
 
 [repo.tizen3.0_x86]
 url=${work_dir}/pre-built/toolchain-x86/
