Add support for IVI x84_64 build
Change-Id: I2570561873ef8d682244f7e9fbf77cf6df79bfba
Signed-off-by: Rui Lv <ruix.lv@intel.com>

--- a/gbs.conf
+++ b/gbs.conf
@@ -7,7 +7,10 @@ fallback_to_native=true
 [repo.tizen3.0_x86]
 url=${work_dir}/pre-built/toolchain-x86/
 
+[repo.tizen3.0_x86_64]
+url=${work_dir}/pre-built/toolchain-x86_64/
+
 [profile.tizen3.0_ivi]
-repos=repo.tizen3.0_x86
+repos=repo.tizen3.0_x86,repo.tizen3.0_x86_64
 buildconf=${work_dir}/scm/meta/build-config/build.conf
 exclude_packages=libtool,gettext
