--- a/gbs.conf
+++ b/gbs.conf
@@ -7,10 +7,13 @@ fallback_to_native=true
 [repo.tizen3.0_x86]
 url=${work_dir}/pre-built/toolchain-x86/
 
+[repo.tizen3.0_arm]
+url=${work_dir}/pre-built/toolchain-arm/
+
 [repo.tizen3.0_x86_64]
 url=${work_dir}/pre-built/toolchain-x86_64/
 
 [profile.tizen3.0_ivi]
-repos=repo.tizen3.0_x86,repo.tizen3.0_x86_64
+repos=repo.tizen3.0_x86,repo.tizen3.0_arm,repo.tizen3.0_x86_64
 buildconf=${work_dir}/scm/meta/build-config/build.conf
 exclude_packages=libtool,gettext
