--- a/gbs.conf
+++ b/gbs.conf
@@ -20,12 +20,20 @@ exclude_packages=libtool,gettext
 
 # For wayland ia32
 # buildconf=${work_dir}/scm/meta/build-config/build-ia32-wayland.conf
+# For x11 ia32
+# buildconf=${work_dir}/scm/meta/build-config/build-ia32-x11.conf
 # For emulator32 wayland
 # buildconf=${work_dir}/scm/meta/build-config/build-emulator32-wayland.conf
 # For wayland x86_64
 # buildconf=${work_dir}/scm/meta/build-config/build-x86_64-wayland.conf
+# For x11 x86_64
+# buildconf=${work_dir}/scm/meta/build-config/build-x86_64-x11.conf
 # For wayland arm32
 # buildconf=${work_dir}/scm/meta/build-config/build-arm-wayland.conf
+# For x11 arm32
+# buildconf=${work_dir}/scm/meta/build-config/build-arm-x11.conf
 # For wayland arm64
 # buildconf=${work_dir}/scm/meta/build-config/build-arm64-wayland.conf
+# For x11 arm64
+# buildconf=${work_dir}/scm/meta/build-config/build-arm64-x11.conf
 
