Add exclude_packages to guarantee successful local full build
Change-Id: I009c840741db1c80946ec54a570ea03f754d782a
Signed-off-by: Rui Lv <ruix.lv@intel.com>

--- a/gbs.conf
+++ b/gbs.conf
@@ -13,3 +13,4 @@ url=${work_dir}/pre-built/toolchain-arm/
 [profile.tizen3.0_mobile]
 repos=repo.tizen3.0_x86,repo.tizen3.0_arm
 buildconf=${work_dir}/scm/meta/build-config/build.conf
+exclude_packages=libtool,gettext
