set textinfo in gbs.conf as excluded package.
background:
    A new circle was introduced by bumping automake version to 1.14:
    texinfo->automake->texinfo

Change-Id: I9b81d50be91fcd3b77cfb666d93112e4f4ac76c1
Signed-off-by: Li Jinjing <jinjingx.li@intel.com>

--- a/gbs.conf
+++ b/gbs.conf
@@ -16,7 +16,7 @@ url=${work_dir}/pre-built/toolchain-arm/
 [profile.tizen3.0_common]
 repos=repo.tizen3.0_x86,repo.tizen3.0_arm,repo.tizen3.0_x86_64
 buildconf=${work_dir}/scm/meta/build-config/build.conf
-exclude_packages=libtool,gettext
+exclude_packages=libtool,gettext,texinfo
 
 # For wayland ia32
 # buildconf=${work_dir}/scm/meta/build-config/build-ia32-wayland.conf
