set textinfo in gbs.conf as excluded package.
background:
    A new circle was introduced by bumping automake version to 1.14:
        texinfo->automake->texinfo

Change-Id: If3355d7f956168e391a3422f0ce39e00a608f51d
Signed-off-by: Li Jinjing <jinjingx.li@intel.com>

--- a/gbs.conf
+++ b/gbs.conf
@@ -16,4 +16,4 @@ url=${work_dir}/pre-built/toolchain-x86_64/
 [profile.tizen3.0_ivi]
 repos=repo.tizen3.0_x86,repo.tizen3.0_arm,repo.tizen3.0_x86_64
 buildconf=${work_dir}/scm/meta/build-config/build.conf
-exclude_packages=libtool,gettext
+exclude_packages=libtool,gettext,texinfo
