--- a/gbs.conf
+++ b/gbs.conf
@@ -13,8 +13,11 @@ url=${work_dir}/pre-built/toolchain-x86/
 [repo.tizen3.0_arm]
 url=${work_dir}/pre-built/toolchain-arm/
 
+[repo.tizen3.0_arm64]
+url=${work_dir}/pre-built/toolchain-arm64/
+
 [profile.tizen3.0_common]
-repos=repo.tizen3.0_x86,repo.tizen3.0_arm,repo.tizen3.0_x86_64
+repos=repo.tizen3.0_x86,repo.tizen3.0_arm,repo.tizen3.0_x86_64,repo.tizen3.0_arm64
 buildconf=${work_dir}/scm/meta/build-config/build.conf
 exclude_packages=libtool,gettext,texinfo
 
