Add arm64 repo for Tizen:Mobile
Change-Id: I816bd1011adc8d5b82c8c04b3392999c2a44f5e3
Signed-off-by: Li Jinjing <jinjingx.li@intel.com>

--- a/gbs.conf
+++ b/gbs.conf
@@ -10,7 +10,10 @@ url=${work_dir}/pre-built/toolchain-x86/
 [repo.tizen3.0_arm]
 url=${work_dir}/pre-built/toolchain-arm/
 
+[repo.tizen3.0_arm64]
+url=${work_dir}/pre-built/toolchain-arm64/
+
 [profile.tizen3.0_mobile]
-repos=repo.tizen3.0_x86,repo.tizen3.0_arm
+repos=repo.tizen3.0_x86,repo.tizen3.0_arm,repo.tizen3.0_arm64
 buildconf=${work_dir}/scm/meta/build-config/build.conf
 exclude_packages=libtool,gettext,texinfo
